--- a/App/Admin/View/SeoWebKeyAdmin/add.html
+++ b/App/Admin/View/SeoWebKeyAdmin/add.html
@@ -79,10 +79,10 @@
                             <div class="col-sm-10">
                                 <div class="row">
                                     <div class="col-md-4">
-                                        <input type="text"  class="form-control" name="baidu1" value="{$baiduprice/1}">
+                                        <input type="text"  class="form-control" id="baidu1" name="baidu1" value="{$baiduprice/1}">
                                     </div>
                                     <div class="col-md-4">
-                                        <input type="text"  class="form-control" name="baidu2" value="{$baiduprice/2}">
+                                        <input type="text"  class="form-control" id="baidu2" name="baidu2" value="{$baiduprice/2}">
                                     </div>
                                 </div>
                             </div>
@@ -93,10 +93,10 @@
                             <div class="col-sm-10">
                                 <div class="row">
                                     <div class="col-md-4">
-                                        <input type="text"  class="form-control" name="sou3601" value="{$sou360 / 1}">
+                                        <input type="text"  class="form-control" id="sou3601" name="sou3601" value="{$sou360 / 1}">
                                     </div>
                                     <div class="col-md-4">
-                                        <input type="text"  class="form-control" name="sou3602" value="{$sou360 / 2}">
+                                        <input type="text"  class="form-control" id="sou3602" name="sou3602" value="{$sou360 / 2}">
                                     </div>
                                 </div>
                             </div>
@@ -107,10 +107,10 @@
                             <div class="col-sm-10">
                                 <div class="row">
                                     <div class="col-md-4">
-                                        <input type="text"  class="form-control" name="google1" value="{$baiduprice/1}">
+                                        <input type="text"  class="form-control" id="google1" name="google1" value="{$baiduprice/1}">
                                     </div>
                                     <div class="col-md-4">
-                                        <input type="text"  class="form-control" name="google2" value="{$baiduprice/2}">
+                                        <input type="text"  class="form-control" id="google2" name="google2" value="{$baiduprice/2}">
                                     </div>
                                 </div>
                             </div>
@@ -121,10 +121,10 @@
                             <div class="col-sm-10">
                                 <div class="row">
                                     <div class="col-md-4">
-                                        <input type="text"  class="form-control" name="sougou1" value="{$sougou / 1}">
+                                        <input type="text"  class="form-control" id="sougou1" name="sougou1" value="{$sougou / 1}">
                                     </div>
                                     <div class="col-md-4">
-                                        <input type="text"  class="form-control" name="sougou2" value="{$sougou / 2}">
+                                        <input type="text"  class="form-control" id="sougou2" name="sougou2" value="{$sougou / 2}">
                                     </div>
                                 </div>
                             </div>
@@ -135,10 +135,10 @@
                             <div class="col-sm-10">
                                 <div class="row">
                                     <div class="col-md-4">
-                                        <input type="text"  class="form-control" name="baidumobile1" value="{$baidumobileprice/1}">
+                                        <input type="text"  class="form-control" id="baidumobile1" name="baidumobile1" value="{$baidumobileprice/1}">
                                     </div>
                                     <div class="col-md-4">
-                                        <input type="text"  class="form-control" name="baidumobile2" value="{$baidumobileprice/2}">
+                                        <input type="text"  class="form-control" id="baidumobile2" name="baidumobile2" value="{$baidumobileprice/2}">
                                     </div>
                                 </div>
                             </div>
@@ -149,10 +149,10 @@
                             <div class="col-sm-10">
                                 <div class="row">
                                     <div class="col-md-4">
-                                        <input type="text"  class="form-control" name="shenma1" value="{$shenma / 1}">
+                                        <input type="text"  class="form-control" id="shenma1" name="shenma1" value="{$shenma / 1}">
                                     </div>
                                     <div class="col-md-4">
-                                        <input type="text"  class="form-control" name="shenma2" value="{$shenma / 2}">
+                                        <input type="text"  class="form-control" id="shenma2" name="shenma2" value="{$shenma / 2}">
                                     </div>
                                 </div>
                             </div>
@@ -163,10 +163,10 @@
                             <div class="col-sm-10">
                                 <div class="row">
                                     <div class="col-md-4">
-                                        <input type="text"  class="form-control" name="biying1" value="{$biying /1}">
+                                        <input type="text"  class="form-control" id="biying1" name="biying1" value="{$biying /1}">
                                     </div>
                                     <div class="col-md-4">
-                                        <input type="text"  class="form-control" name="biying2" value="{$biying / 2}">
+                                        <input type="text"  class="form-control" id="biying2" name="biying2" value="{$biying / 2}">
                                     </div>
                                 </div>
                             </div>
@@ -226,6 +226,31 @@
         },'JSON');
     });
     $("#button-add").click(function () {
+
+        var keyword = $('input[name = "keyword"]').val();
+        var webid=$("#webid").val();
+
+        if(webid==0){
+            dialog.error('请选择站点');
+            return;
+        }
+
+        if(!keyword){
+            dialog.error('请填写要查询关键词');
+            return;
+        }
+        var baidu1 = $('input[name = "baidu1"]').val();
+        var sou3601 = $('input[name = "sou3601"]').val();
+        var sougou1 = $('input[name = "sougou1"]').val();
+        var google1 = $('input[name = "google1"]').val();
+        var shenma1 = $('input[name = "shenma1"]').val();
+        var biying1 = $('input[name = "biying1"]').val();
+
+        if(baidu1==0 || sou3601==0 || sougou1==0 || google1==0 || shenma1==0 || biying1==0){
+            dialog.error('请先查询关键词价格');
+            return;
+        }
+
         var data = $("#submit-menu").serializeArray();
         postData = {};
 
