菜单默认展开，去掉折叠效果

--- a/App/Admin/View/SeoSetting/index.html
+++ b/App/Admin/View/SeoSetting/index.html
@@ -10,7 +10,7 @@
         <div class="nav-close"><i class="fa fa-times-circle"></i>
         </div>
         <div class="sidebar-collapse">
-            <ul class="nav" id="side-menu">
+            <ul class="nav" >
                 <li class="nav-header">
                     <div class="dropdown profile-element">
                         <span><img alt="image" class="img-circle" src="__PUBLIC__/img/profile_small.jpg"/></span>
@@ -44,7 +44,7 @@
                     </a>
                 </li>
                 <foreach name="submenu" key="k" item="v">
-                    <li>
+                    <li class="active">
                         <a class="J_menuItem">
                             <i class="fa fa-magic"></i>
                             <span class="nav-label">{$v.name}</span>
