--- a/App/Admin/View/SeoWebAdmin/ListInfo.html
+++ b/App/Admin/View/SeoWebAdmin/ListInfo.html
@@ -79,7 +79,7 @@
                                         <a href="javascript:void(0)"
                                            attr-message="删除"
                                            class="btn btn-primary btn-rounded" id="zzcms-delete"
-                                           attr-id="{$v['id']}">删除人员</a>
+                                           attr-id="{$v['id']}">删除网站</a>
                                     </td>
                                 </tr>
                             </foreach>
