--- a/App/Admin/View/SeoWebKeyAdmin/ListInfo.html
+++ b/App/Admin/View/SeoWebKeyAdmin/ListInfo.html
@@ -45,19 +45,20 @@
                 <div class="ibox-content">
                     <div class="row">
                         <div class="">
-                            <a href="{:U('add')}" class="btn btn-primary ">新增网站</a>
+                            <a href="{:U('add')}" class="btn btn-primary ">新增关键词</a>
                         </div>
                     </div>
                     <div class="table-responsive">
                         <table class="table table-striped">
                             <thead>
                             <tr>
-                                <th>网站名称</th>
-                                <th>网站域名</th>
-                                <th>关键词数</th>
+                                <th>关键词名称</th>
+                                <th>所属网站</th>
                                 <th>搜索引擎</th>
-                                <th>余额</th>
-                                <th>创建日期</th>
+                                <th>首页价格</th>
+                                <th>排名</th>
+                                <th>扣费</th>
+                                <th>累计扣费</th>
                                 <!--<th>状态</th>-->
                                 <th>操作</th>
                             </tr>
@@ -65,26 +66,26 @@
                             <tbody>
                             <foreach name='listinfo' item='v'>
                                 <tr>
-                                    <td>{$v.websitename}</td>
+                                    <td>{$v.name}</td>
                                     <td>
                                         {$v.websiteurl}
                                     </td>
-                                    <td>{$v.keywordnumber}</td>
                                     <td>{$v.platformname}</td>
-                                    <td>{$v.blance}</td>
-                                    <td>{$v.createtime}</td>
+                                    <td>{$v.priceone}</td>
+                                    <td>{$v.rank}</td>
+                                    <td>{$v.priceone}</td>
+                                    <td>{$v.totalprice}</td>
                                     <td>
                                         <a href="{:U('edit',array('id' => $v['id']))}"
                                            class="btn btn-primary btn-rounded">修改</a>
-                                        <a href="javascript:void(0)"
-                                           attr-message="删除"
-                                           class="btn btn-primary btn-rounded" id="zzcms-delete"
-                                           attr-id="{$v['id']}">删除人员</a>
                                     </td>
                                 </tr>
                             </foreach>
                             </tbody>
                         </table>
+                        <div class="text-center">
+                            {$page}
+                        </div>
                     </div>
 
                 </div>
