--- a/App/Admin/View/SeoWebAdmin/ListInfo.html
+++ b/App/Admin/View/SeoWebAdmin/ListInfo.html
@@ -71,7 +71,7 @@
                                     </td>
                                     <td>{$v.keywordnumber}</td>
                                     <td>{$v.platformname}</td>
-                                    <td>{$v.blance}</td>
+                                    <td>{$balance}</td>
                                     <td>{$v.createtime}</td>
                                     <td>
                                         <a href="{:U('edit',array('id' => $v['id']))}"
