解决分数显示不正确问题，解决扣分时topid不正确问题

--- a/App/Admin/View/Report/personalDetail.html
+++ b/App/Admin/View/Report/personalDetail.html
@@ -88,8 +88,8 @@
                                 <th>项目分</th>
                                 <th>扣分项</th>
                                 <th>扣分数</th>
-                                <th>最后得分</th>
-                                <th>评价</th>
+                                <th>项目得分</th>
+                                <!--<th>评价</th>-->
                             </tr>
                             </thead>
                             <tbody>
@@ -108,7 +108,7 @@
                                     <td>{$v.checknum}</td>
                                     <td>{$v.checkscore}</td>
                                     <td>{$v.finalscore}</td>
-                                    <td>{$v.evl}</td>
+                                    <!--<td>{$v.evl}</td>-->
                                 </tr>
                             </foreach>
                             </tbody>
