--- a/App/Admin/View/SystemSetting/index.html
+++ b/App/Admin/View/SystemSetting/index.html
@@ -13,34 +13,15 @@
             <ul class="nav" id="side-menu">
                 <li class="nav-header">
                     <div class="dropdown profile-element">
-                        <span><img alt="image" class="img-circle" src="__PUBLIC__/img/profile_small.jpg"/></span>
-                        <a data-toggle="dropdown" class="dropdown-toggle" href="#">
-                                <span class="clear">
-                               <span class="block m-t-xs"><strong class="font-bold">Beaut-zihan</strong></span>
-                                <span class="text-muted text-xs block">超级管理员<b class="caret"></b></span>
-                                </span>
-                        </a>
-                        <ul class="dropdown-menu animated fadeInRight m-t-xs">
-                            <li><a class="J_menuItem" href="form_avatar.html">修改头像</a>
-                            </li>
-                            <li><a class="J_menuItem" href="profile.html">个人资料</a>
-                            </li>
-                            <li><a class="J_menuItem" href="contacts.html">联系我们</a>
-                            </li>
-                            <li><a class="J_menuItem" href="mailbox.html">信箱</a>
-                            </li>
-                            <li class="divider"></li>
-                            <li><a href="{:U('Login/index')}">安全退出</a>
-                            </li>
-                        </ul>
+                        <span><img alt="image" class="img-responsive" src="__PUBLIC__/img/logo.png"/></span>
                     </div>
-                    <div class="logo-element">H+
+                    <div class="logo-element">智优赢家
                     </div>
                 </li>
                 <li>
-                    <a href="{:U('Index/index')}">
+                    <a>
                         <i class="fa fa-home"></i>
-                        <span class="nav-label">后台首页</span>
+                        <span class="nav-label">系统设置</span>
                     </a>
                 </li>
                 <foreach name="submenu" key="k" item="v">
@@ -107,7 +88,7 @@
                     data-id="index_v1.html" seamless></iframe>
         </div>
         <div class="footer">
-            <div class="pull-right">&copy; 2014-2015 <a href="http://www.hnqz178.com/" target="_blank">湖南群智信息科技有限公司</a>
+            <div class="pull-right">&copy; 2014-2015 <a href="http://www.zhiuseo.com/" target="_blank">湖南群智信息科技有限公司</a>
             </div>
         </div>
     </div>
