--- a/App/Admin/View/SeoWebAdmin/ListInfo.html
+++ b/App/Admin/View/SeoWebAdmin/ListInfo.html
@@ -76,10 +76,10 @@
                                     <td>
                                         <a href="{:U('edit',array('id' => $v['id']))}"
                                            class="btn btn-primary btn-rounded">修改</a>
-                                        <a href="javascript:void(0)"
-                                           attr-message="删除"
-                                           class="btn btn-primary btn-rounded" id="zzcms-delete"
-                                           attr-id="{$v['id']}">删除网站</a>
+                                        <!--<a href="javascript:void(0)"-->
+                                           <!--attr-message="删除"-->
+                                           <!--class="btn btn-primary btn-rounded" id="zzcms-delete"-->
+                                           <!--attr-id="{$v['id']}">删除网站</a>-->
                                     </td>
                                 </tr>
                             </foreach>
