--- a/App/Admin/View/SystemSetting/index.html
+++ b/App/Admin/View/SystemSetting/index.html
@@ -84,7 +84,7 @@
             <a href="{:U('Login/index')}" class="roll-nav roll-right J_tabExit"><i class="fa fa fa-sign-out"></i> 退出</a>
         </div>
         <div class="row J_mainContent" id="content-main">
-            <iframe class="J_iframe" name="iframe0" width="100%" height="100%" src="{:U('/index/info')}" frameborder="0"
+            <iframe class="J_iframe" name="iframe0" width="100%" height="100%" src="{:U('/AgentAdmin/UserAdmin')}" frameborder="0"
                     data-id="index_v1.html" seamless></iframe>
         </div>
         <div class="footer">
