--- a/App/Admin/View/SeoSetting/index.html
+++ b/App/Admin/View/SeoSetting/index.html
@@ -15,7 +15,7 @@
                     <div class="dropdown profile-element">
                         <span><img alt="image" class="img-responsive" src="__PUBLIC__/img/logo.png"/></span>
                     </div>
-                    <div class="logo-element">智优赢家
+                    <div class="logo-element">智优营家
                     </div>
                 </li>
                 <li>
