--- a/App/Admin/View/AgentAdmin/add.html
+++ b/App/Admin/View/AgentAdmin/add.html
@@ -97,6 +97,7 @@
                         <div class="hr-line-dashed"></div>
                         <div class="form-group">
                             <div class="col-sm-4 col-sm-offset-2">
+                                <input type="hidden" name="TOKEN" value="{:session('TOKEN')}">
                                 <button class="btn btn-primary" type="button" id="button-add">保存内容</button>
                                 <button class="btn btn-white" type="button" id="button-cancal">取消返回</button>
                             </div>
