修改关键字查不到错误

--- a/App/Admin/View/AgentAdmin/ListInfo.html
+++ b/App/Admin/View/AgentAdmin/ListInfo.html
@@ -74,7 +74,7 @@
                                     <td>{$v.platformname}</td>
                                     <td>{$v.priceone}</td>
                                     <td>{$v.rank}</td>
-                                    <td><a href="{:U('listrank',array('keywordid'=>$v['keywordid'],'id'=>$v['id'],'platformname'=>$v['platformname']))}">查看详情</a></td>
+                                    <td><a href="{:U('listrank',array('userid'=>$v['userid'],'keywordid'=>$v['keywordid'],'id'=>$v['id'],'platformname'=>$v['platformname']))}">查看详情</a></td>
                                     <!--<td>{$v.priceone}</td>-->
                                     <td>{$v.totalprice}</td>
                                     <td>
