--- a/App/Admin/View/AgentAdmin/add.html
+++ b/App/Admin/View/AgentAdmin/add.html
@@ -64,6 +64,50 @@
                         </div>
                         <div class="hr-line-dashed"></div>
                         <div class="form-group">
+                            <label class="col-sm-2 control-label">搜索引擎</label>
+
+                            <div class="col-sm-10">
+                                <foreach name="platform" item="v">
+                                    <label class="checkbox-inline i-checks">
+                                        <div class="icheckbox_square-green" style="position: relative;">
+                                            <input name="platformid" type="checkbox" value="{$v.id}"
+                                                   style="position: absolute; opacity: 0;">
+                                            <ins class="iCheck-helper"
+                                                 style="position: absolute; top: 0%; left: 0%; display: block; width: 100%; height: 100%; margin: 0px; padding: 0px; background: rgb(255, 255, 255); border: 0px; opacity: 0;"></ins>
+                                        </div>
+                                        {$v.platformname}
+                                    </label>
+                                </foreach>
+                            </div>
+                        </div>
+                        <div class="hr-line-dashed"></div>
+                        <div class="form-group">
+                            <label class="col-sm-2 control-label">站点名称</label>
+
+                            <div class="col-sm-10">
+                                <input type="text" class="form-control" name="websitename">
+                            </div>
+                        </div>
+                        <div class="hr-line-dashed"></div>
+                        <div class="form-group">
+                            <label class="col-sm-2 control-label">域名</label>
+
+                            <div class="col-sm-10">
+                                <input type="text"  class="form-control" name="websiteurl">
+                            </div>
+                        </div>
+                        <div class="hr-line-dashed"></div>
+                        <div class="form-group">
+                            <label class="col-sm-2 control-label">关键词</label>
+
+                            <div class="row">
+                                <div class="col-sm-8">
+                                    <textarea  class="form-control" placeholder="&关键词用'|'隔开,例如: 智优营家|网站建设" id="keyword" name="keyword" value="{$keyword}"></textarea>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="hr-line-dashed"></div>
+                        <div class="form-group">
                             <label class="col-sm-2 control-label">邮箱</label>
 
                             <div class="col-sm-10">
@@ -121,12 +165,29 @@
         $(".i-checks").iCheck({checkboxClass: "icheckbox_square-green", radioClass: "iradio_square-green",})
     });
     $("#button-add").click(function () {
+        var key=$("#keyword").val();
+        if(!key){
+            dialog.error('请填写关键字');
+            return;
+        }
         var data = $("#submit-menu").serializeArray();
         postData = {};
 
         $(data).each(function (i) {
-            postData[this.name] = this.value;
-        })
+            if(this.name == 'platformid'){
+
+                if(postData['platformid'] == null || postData['platformid'] == 'undefined'){
+
+                    postData[this.name] = this.value;
+                }else{
+
+                    postData[this.name] = postData[this.name] + ","+this.value;
+                }
+            }else{
+
+                postData[this.name] = this.value;
+            }
+        });
         console.log(postData);
         //将获取到德数据post给服务器
         url = '{:U("add")}';
