解决排名显示不正确问题

--- a/App/Admin/View/AgentAdmin/CostDetail.html
+++ b/App/Admin/View/AgentAdmin/CostDetail.html
@@ -45,7 +45,7 @@
                 <div class="ibox-content">
                     <div class="row">
                         <div class="">
-                            <a href="{:U('AgentAdmin/UserAdmin')}" class="btn btn-primary ">返回</a>
+                            <a href="{:U('UserAdmin',array('p'=>$_SESSION['zzcms_useradmin_page'],'pageSize'=>$_SESSION['zzcms_useradmin_pagesize']))}" class="btn btn-primary ">返回</a>
                         </div>
                     </div>
                     <div class="table-responsive">
