解决扣费不正确问题

--- a/App/Admin/View/AgentAdmin/listrank.html
+++ b/App/Admin/View/AgentAdmin/listrank.html
@@ -45,7 +45,7 @@
                 <div class="ibox-content">
                     <div class="row">
                         <div class="">
-                            <a href="{:U('ListInfo',array('userid'=>$userid,'p'=>$_SESSION['zzcms_useradmin_page'],'pageSize'=>$_SESSION['zzcms_useradmin_pagesize']))}" class="btn btn-primary ">返回</a>
+                            <a href="{:U('ListInfo',array('userid'=>$userid,'p'=>$_SESSION['zzcms_userlistinfo_page'],'pageSize'=>$_SESSION['zzcms_userlistinfo_pagesize']))}" class="btn btn-primary ">返回</a>
                         </div>
                     </div>
                     <div class="table-responsive">
