--- a/App/Admin/View/AgentAdmin/AddKeyword.html
+++ b/App/Admin/View/AgentAdmin/AddKeyword.html
@@ -59,6 +59,24 @@
                         </div>
                         <div class="hr-line-dashed"></div>
                         <div class="form-group">
+                            <label class="col-sm-2 control-label">搜索引擎</label>
+
+                            <div class="col-sm-10">
+                                <foreach name="platform" item="v">
+                                    <label class="checkbox-inline i-checks">
+                                        <div class="icheckbox_square-green" style="position: relative;">
+                                            <input name="platformid" type="checkbox" value="{$v.id}"
+                                                   style="position: absolute; opacity: 0;">
+                                            <ins class="iCheck-helper"
+                                                 style="position: absolute; top: 0%; left: 0%; display: block; width: 100%; height: 100%; margin: 0px; padding: 0px; background: rgb(255, 255, 255); border: 0px; opacity: 0;"></ins>
+                                        </div>
+                                        {$v.platformname}
+                                    </label>
+                                </foreach>
+                            </div>
+                        </div>
+                        <div class="hr-line-dashed"></div>
+                        <div class="form-group">
                             <label class="col-sm-2 control-label">价格</label>
 
                             <div class="col-sm-10">
