--- a/App/Admin/View/Index/index.html
+++ b/App/Admin/View/Index/index.html
@@ -88,7 +88,7 @@
                     data-id="index_v1.html" seamless></iframe>
         </div>
         <div class="footer">
-            <div class="pull-right">&copy; 2014-2015 <a href="http://www.hnqz178.com/" target="_blank">湖南群智信息科技有限公司</a>
+            <div class="pull-right">&copy; 2014-2015 <a href="http://www.zhiuseo.com/" target="_blank">智优营家</a>
             </div>
         </div>
     </div>
