--- a/App/Admin/View/Login/index.html
+++ b/App/Admin/View/Login/index.html
@@ -5,7 +5,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
 
-    <title>群智科技SEO管理</title>
+    <title>智优营家SEO管理</title>
+    <meta name="keywords" content="H+后台主题,后台bootstrap框架,会员中心主题,后台HTML,响应式后台">
+    <meta name="description" content="H+是一个完全响应式，基于Bootstrap3最新版本开发的扁平化主题，她采用了主流的左右两栏式布局，使用了Html5+CSS3等现代技术">
     <link href="__PUBLIC__/css/bootstrap.min.css" rel="stylesheet">
     <link href="__PUBLIC__/css/font-awesome.min.css?v=4.4.0" rel="stylesheet">
     <link href="__PUBLIC__/css/animate.min.css" rel="stylesheet">
@@ -26,24 +28,23 @@
             <div class="col-sm-7">
                 <div class="signin-info">
                     <div class="logopanel m-b">
-                        <h1>[ 群智科技 ]</h1>
+                        <h1>[ 智优营家 ]</h1>
                     </div>
                     <div class="m-b"></div>
-                    <h4>欢迎使用 <strong>群智科技SEO管理系统</strong></h4>
+                    <h4>欢迎使用 <strong>智优营家SEO管理系统</strong></h4>
                     <ul class="m-b">
-                        <li><i class="fa fa-arrow-circle-o-right m-r-xs"></i> 优势一</li>
-                        <li><i class="fa fa-arrow-circle-o-right m-r-xs"></i> 优势二</li>
-                        <li><i class="fa fa-arrow-circle-o-right m-r-xs"></i> 优势三</li>
-                        <li><i class="fa fa-arrow-circle-o-right m-r-xs"></i> 优势四</li>
-                        <li><i class="fa fa-arrow-circle-o-right m-r-xs"></i> 优势五</li>
+                        <li><i class="fa fa-arrow-circle-o-right m-r-xs"></i> 先排名后付费</li>
+                        <li><i class="fa fa-arrow-circle-o-right m-r-xs"></i> 人工优化排名稳定</li>
+                        <li><i class="fa fa-arrow-circle-o-right m-r-xs"></i> 按天按效果付费</li>
+                        <li><i class="fa fa-arrow-circle-o-right m-r-xs"></i> 不达标可退款</li>
+                        <li><i class="fa fa-arrow-circle-o-right m-r-xs"></i> 后台管理透明化</li>
                     </ul>
-                    <!--<strong>还没有账号？ <a href="#">立即注册&raquo;</a></strong>-->
                 </div>
             </div>
             <div class="col-sm-5">
                 <form method="post">
                     <h4 class="no-margins">登录：</h4>
-                    <p class="m-t-md">群智科技SEO管理系统</p>
+                    <p class="m-t-md">智优营家SEO管理系统</p>
                     <input type="text" class="form-control uname" name="username" placeholder="用户名" />
                     <input type="password" class="form-control pword m-b" name="password" placeholder="密码" />
                     <!--<a href="">忘记密码了？</a>-->
@@ -53,7 +54,7 @@
         </div>
         <div class="signup-footer">
             <div class="pull-left">
-                &copy; 2017 All Rights Reserved. Qunzhi
+                <a href="www.zhiuseo.com"> 2017 All Rights Reserved. 智优营家</a>
             </div>
         </div>
     </div>
