repair the wrong address of the url

--- a/App/Admin/View/Login/index.html
+++ b/App/Admin/View/Login/index.html
@@ -54,7 +54,7 @@
         </div>
         <div class="signup-footer">
             <div class="pull-left">
-                <a href="www.zhiuseo.com"> 2017 All Rights Reserved. 智优营家</a>
+                <a href="http://www.zhiuseo.com"> 2017 All Rights Reserved. 智优营家</a>
             </div>
         </div>
     </div>
